--- a/wdocs/index.html
+++ b/wdocs/index.html
@@ -4,4 +4,12 @@ http://localhost:8083/map/index.html?user=jpm&device=test&format=linestring&from
 </pre>
 
 <a href="map/index.html?user=jpm&device=test&format=linestring&from=2014-01-01">clickstdu</a>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+
+<a href="ws.html">Click for Websocket demo; new pubs will be shown there</a>
 </html>
