--- a/wdocs/index.html
+++ b/wdocs/index.html
@@ -11,5 +11,9 @@ http://localhost:8083/map/index.html?user=jpm&device=test&format=linestring&from
 <br />
 <br />
 
-<a href="ws.html">Click for Websocket demo; new pubs will be shown there</a>
+<ul>
+<li><a href="ws.html">Click for Websocket demo; new pubs will be shown there</a></li>
+
+<li><a href="last/index.html">Click for map of LAST locations</a></li>
+</ul>
 </html>
