--- a/wdocs/last/index.html
+++ b/wdocs/last/index.html
@@ -15,6 +15,8 @@
       td { border-bottom: 1px solid; border-right: 1px dotted;}
 
       #map-canvas { height: 100% }
+      #wrapper { position: relative; }
+      #mapover { position: absolute; top: 10px; left: 120px; z-index: 99; background: red; }
 
     </style>
      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&signed_in=true"></script>
@@ -23,8 +25,9 @@
   </head>
   <body>
   	<div id="output"></div>
-    <div>
+    <div id="wrapper">
       <div id="map-canvas" style='width: 100%; height: 600px;'/></div>
+      <div id="mapover"></div>
     </div>
   </body>
 </html>
