--- a/wdocs/table/index.html
+++ b/wdocs/table/index.html
@@ -63,6 +63,7 @@
 		d['fulldate']	= dt.format("DD MMM YYYY HH:mm:ss");
 		d['addr']	= d['addr'] || '(unknown)';
 		d['cc']		= d['cc'] || '__';
+		d['tid']	= d['tid'] || '__';
 
 		upsert(d);
 	}
@@ -95,7 +96,7 @@
             autoWidth: false,
 	    order: [[ 2, "desc" ]],
             columnDefs: [
-		    { orderable : true, targets: [0, 1, 3, 4] },
+		    { orderable : true, targets: [0, 1, 3, 4, 5] },
     
                     {
                             className: 'topic',
@@ -156,6 +157,15 @@
                             "targets" : [4],
                     },
                     {
+                            className: 'tid',
+                            name: 'tid',
+                            title: "TID",
+                            visible: true,
+                            data: null,
+                            render: 'tid',
+                            "targets" : [5],
+                    },
+                    {
                             className: 'cc',
                             name: 'cc',
                             title: "CC",
@@ -165,7 +175,7 @@
 			    	var t = "<img src='flags/{{cc}}.png' title='{{cc}}'/>";
 				return Mustache.render(t, data);
 			    },
-                            "targets" : [5],
+                            "targets" : [6],
                     },
                     {
                             className: 'addr',
@@ -177,7 +187,7 @@
 			    	var t = "<a target='_new' href='http://maps.google.com/?q={{lat}},{{lon}}'>{{addr}}</a>";
 				return Mustache.render(t, data);
 			    },
-                            "targets" : [6],
+                            "targets" : [7],
                     },
             ],
     
