--- a/wdocs/index.html
+++ b/wdocs/index.html
@@ -12,8 +12,8 @@ http://localhost:8083/map/index.html?user=jpm&device=test&format=linestring&from
 <br />
 
 <ul>
-<li><a href="ws.html">Click for Websocket demo; new pubs will be shown there</a></li>
-
-<li><a href="last/index.html">Click for map of LAST locations</a></li>
+<li><a href="test-ws.html">Click for Websocket demo; new pubs will be shown there</a></li>
+<li><a href="last/index.html">Click for MAP of current locations</a></li>
+<li><a href="table/index.html">Click for TABLE of current locations</a></li>
 </ul>
 </html>
