--- a/wdocs/table/index.html
+++ b/wdocs/table/index.html
@@ -90,6 +90,8 @@
     $(document).ready(function() {
 	getuserlist();
 
+	console.log(JSON.stringify(location));
+
         var counter = 0;
         tab = $('#livetable').DataTable({
             paging: false,
