muck around with WS URI

--- a/wdocs/last/index.html
+++ b/wdocs/last/index.html
@@ -21,7 +21,7 @@
     </style>
      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&signed_in=true"></script>
      <script src="functions.js"></script>
-     <script src="ws.js"></script>
+     <script src="websock.js"></script>
   </head>
   <body>
   	<div id="output"></div>
