--- a/wdocs/index.html
+++ b/wdocs/index.html
@@ -1,17 +1,7 @@
 <html>
-<pre>
-http://localhost:8083/map/index.html?user=jpm&device=test&format=linestring&from=2014-01-01
-</pre>
-
-<a href="map/index.html?user=jpm&device=test&format=linestring&from=2014-01-01">clickstdu</a>
-
-<br />
-<br />
-<br />
-<br />
-<br />
-
 <ul>
+<li><a href="map/index.html?user=jpm&device=test&format=geojson&from=2014-01-01">Example Map with GEOJSON</a></li>
+<li><a href="map/index.html?user=jpm&device=test&format=linestring&from=2014-01-01">Example Map with LINESTRING</a></li>
 <li><a href="test-ws.html">Click for Websocket demo; new pubs will be shown there</a></li>
 <li><a href="last/index.html">Click for MAP of current locations</a></li>
 <li><a href="table/index.html">Click for TABLE of current locations</a></li>
