remove 30d points which can be too 'heavy' for browsers

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -70,7 +70,6 @@
 	var line = "<tr><td>{{ username }} / {{ device }}</td>" +
 	"<td><a href='map/index.html?{{udev}}&format=geojson&from={{f12}}'>12h</a></td>" +
 	"<td><a href='map/index.html?{{udev}}&format=geojson&from={{f7}}'>7d</a></td>" +
-	"<td><a href='map/index.html?{{udev}}&format=geojson&from={{f30}}'>30d</a></td>" +
 
 	"<td><a href='map/index.html?{{udev}}&format=linestring&from={{f12}}'>12h</a></td>" +
 	"<td><a href='map/index.html?{{udev}}&format=linestring&from={{f7}}'>7d</a></td>" +
@@ -107,7 +106,7 @@
     <div id='content'>
     <table id='usertable'>
       <thead>
-        <tr><th>User/Device</th><th>Points</th><th>Points</th><th>Points</th><th>Track</th><th>Track</th><th>Track</th></tr>
+        <tr><th>User/Device</th><th>Points</th><th>Points</th><th>Track</th><th>Track</th><th>Track</th></tr>
       </thead>
       <tbody>
       </tbody>
