--- a/docroot/index.html
+++ b/docroot/index.html
@@ -98,9 +98,7 @@
   <body>
 <div>
   <ul>
-  <li><a href="last/index.html">Live MAP of current locations</a>
-	  (<a href="last/index.html?fit=1">auto zoom</a>)
-  	</li>
+  <li><a href="last/index.html">Live MAP of current locations</a></li>
   <li><a href="table/index.html">TABLE of current locations</a></li>
   </ul>
 </div>
