--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -17,6 +17,12 @@
       #map-canvas { height: 100% }
       #wrapper { position: relative; }
       #mapover { position: absolute; top: 10px; left: 120px; z-index: 99; background: red; }
+      #maplabel { position: absolute; top: 10px; left: 180px; z-index: 99;
+	background: white;
+	font-size: 1.2em;
+	padding: 4px;
+	border: 2px solid gray;
+      }
 
     </style>
      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&signed_in=true"></script>
@@ -28,6 +34,7 @@
     <div id="wrapper">
       <div id="map-canvas" style='width: 100%; height: 600px;'/></div>
       <div id="mapover"></div>
+      <div id="maplabel"></div>
     </div>
   </body>
 </html>
