--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -7,8 +7,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" sizes="192x192" href="pista-micro.png">
-    <link rel="apple-touch-icon" href="pista-micro.png" />
+    <link rel="icon" sizes="192x192" href="OwnTracksRecorder-192.png">
+    <link rel="apple-touch-icon" href="OwnTracksRecorder-192.png" />
     <style type="text/css">
       body {  font-size: 80%; }
 
