fix favicon for all pages

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="last/OwnTracksRecorder-192.png">
-    <link rel="apple-touch-icon" href="last/OwnTracksRecorder-192.png" />
+    <link rel="icon" sizes="192x192" href="img/recorder.png" />
+    <link rel="apple-touch-icon" href="img/recorder.png" />
 
     <script src="table/js/jquery-1.11.3.min.js" type="text/javascript"></script>
     <script src="table/js/mustache.js" type="text/javascript"></script>
