--- a/docroot/map/index.html
+++ b/docroot/map/index.html
@@ -6,6 +6,9 @@
 
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="../img/recorder.png" />
+    <link rel="apple-touch-icon" href="../img/recorder.png" />
+
     <style type="text/css">
       body {  font-size: 80%; }
 
