--- a/docroot/table/index.html
+++ b/docroot/table/index.html
@@ -4,6 +4,10 @@
   <head>
     <title>OwnTracks Recorder Table</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="../img/recorder.png" />
+    <link rel="apple-touch-icon" href="../img/recorder.png" />
     <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
     <script src="js/mustache.js"></script>
     <script src="js/moment.min.js"></script>
