--- a/docroot/map/index.html
+++ b/docroot/map/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GeoJSON</title>
+    <title>GeoJSON track</title>
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0" />
 
     <meta name="mobile-web-app-capable" content="yes">
