--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -22,11 +22,15 @@
 	padding: 4px;
 	border: 2px solid gray;
       }
+      .extrainfo {
+	font-size: 80%;
+      }
 
     </style>
-     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&signed_in=true"></script>
+     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
      <script src="functions.js"></script>
      <script src="websock.js"></script>
+     <script src="../table/js/moment.min.js"></script>
   </head>
   <body>
   	<div id="output"></div>
