sensor not required

--- a/docroot/map/index.html
+++ b/docroot/map/index.html
@@ -17,7 +17,7 @@
       #map-canvas { height: 100% }
 
     </style>
-     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&signed_in=true"></script>
+     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script src="functions.js"></script>
   </head>
   <body>
