points on GeoJSON map are now clickable for infowindow 	closes #78

--- a/docroot/map/index.html
+++ b/docroot/map/index.html
@@ -18,6 +18,8 @@
 
     </style>
      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+    <script src="../table/js/mustache.js"></script>
+    <script src="../table/js/moment.min.js"></script>
     <script src="functions.js"></script>
   </head>
   <body>
