clean html using Mustache

--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -25,12 +25,14 @@
       .extrainfo {
 	font-size: 80%;
       }
+      .latlon { color: gray; }
 
     </style>
      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
      <script src="functions.js"></script>
      <script src="websock.js"></script>
      <script src="../table/js/moment.min.js"></script>
+     <script src="../table/js/mustache.js"></script>
   </head>
   <body>
   	<div id="output"></div>
