map: allow rename of topic in map popups

--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -31,6 +31,7 @@
      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
      <script src="functions.js"></script>
      <script src="websock.js"></script>
+     <script src="config.js"></script>
      <script src="../table/js/moment.min.js"></script>
      <script src="../table/js/mustache.js"></script>
   </head>
