--- a/docroot/map/index.html
+++ b/docroot/map/index.html
@@ -10,11 +10,9 @@
     <link rel="apple-touch-icon" href="../img/recorder.png" />
 
     <style type="text/css">
-      body {  font-size: 80%; }
+      body {  font-size: 80%; padding: 0; margin: 0px; }
 
-      td { border-bottom: 1px solid; border-right: 1px dotted;}
-
-      #map-canvas { height: 100% }
+      #map-canvas { height: 100vh; }
 
     </style>
      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
@@ -25,7 +23,7 @@
   <body>
 
     <div>
-      <div id="map-canvas" style='width: 100%; height: 700px;'/></div>
+      <div id="map-canvas" style='width: 100vw; height: 100vh;'/></div>
     </div>
   </body>
 </html>
