--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" sizes="192x192" href="../img/recorder.png" />
     <link rel="apple-touch-icon" href="../img/recorder.png" />
     <style type="text/css">
-      body {  font-size: 80%; }
+      body {  font-size: 80%; margin: 0; padding: 0; }
 
       td { border-bottom: 1px solid; border-right: 1px dotted;}
 
@@ -38,7 +38,7 @@
   <body>
   	<div id="output"></div>
     <div id="wrapper">
-      <div id="map-canvas" style='width: 100%; height: 600px;'/></div>
+      <div id="map-canvas" style='width: 100vw; height: 100vh;'/></div>
       <div id="maplabel"></div>
     </div>
   </body>
