--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -32,8 +32,8 @@
      <script src="functions.js"></script>
      <script src="websock.js"></script>
      <script src="config.js"></script>
-     <script src="../table/js/moment.min.js"></script>
-     <script src="../table/js/mustache.js"></script>
+     <script src="../static/js/moment.min.js"></script>
+     <script src="../static/js/mustache.js"></script>
   </head>
   <body>
   	<div id="output"></div>
