--- a/docroot/table/index.html
+++ b/docroot/table/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" sizes="192x192" href="../img/recorder.png" />
     <link rel="apple-touch-icon" href="../img/recorder.png" />
     <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
-    <script src="js/mustache.js"></script>
-    <script src="js/moment.min.js"></script>
+    <script src="../static/js/mustache.js"></script>
+    <script src="../static/js/moment.min.js"></script>
     <script src="defaultface.js"></script>
     <script src="config.js"></script>
 
