--- a/docroot/index.html
+++ b/docroot/index.html
@@ -9,9 +9,9 @@
     <link rel="icon" sizes="192x192" href="img/recorder.png" />
     <link rel="apple-touch-icon" href="img/recorder.png" />
 
-    <script src="table/js/jquery-1.11.3.min.js" type="text/javascript"></script>
-    <script src="table/js/mustache.js" type="text/javascript"></script>
-    <script src="table/js/moment.min.js" type="text/javascript"></script>
+    <script src="static/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="static/js/mustache.js" type="text/javascript"></script>
+    <script src="static/js/moment.min.js" type="text/javascript"></script>
     <style>
     body, a, a:visited {
         font-family: Helvetica, sans-serif;
