--- a/docroot/table/index.html
+++ b/docroot/table/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="../img/recorder.png" />
     <link rel="apple-touch-icon" href="../img/recorder.png" />
-    <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
+    <script src="../static/js/jquery-1.12.0.min.js" type="text/javascript"></script>
     <script src="../static/js/mustache.js"></script>
     <script src="../static/js/moment.min.js"></script>
     <script src="defaultface.js"></script>
