add avatar to live map

--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -24,9 +24,11 @@
 	padding: 4px;
 	border: 2px solid gray;
       }
-      .extrainfo {
-	font-size: 80%;
-      }
+      .extrainfo { font-size: 80%; }
+      .latlon { color: gray; }
+      .block1 { float: left; }
+      .block2 { border 1px solid; background-color: white; width: 40px; height: 40px; float: right; margin-left: 20px; margin-right: 0px; padding-right: 0; }
+      .img-circle { border-radius: 50%; border: 1px solid #CACACA; }
       .latlon { color: gray; }
 
     </style>
