shuffle favicon img 	closes #121

--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -7,8 +7,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" sizes="192x192" href="../img/recorder.png" />
-    <link rel="apple-touch-icon" href="../img/recorder.png" />
+    <link rel="icon" sizes="192x192" href="../static/recorder.png" />
+    <link rel="apple-touch-icon" href="../static/recorder.png" />
     <style type="text/css">
      html { height: 100% }
      body { height: 100%; margin: 0px; padding: 0px }
