apiKey support for last/index.html

--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -32,18 +32,35 @@
       .latlon { color: gray; }
 
     </style>
-     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+     <script src="apikey.js"></script>
      <script src="functions.js"></script>
      <script src="websock.js"></script>
      <script src="config.js"></script>
      <script src="../static/js/moment.min.js"></script>
      <script src="../static/js/mustache.js"></script>
+     <script>
+     	function loadMapsAPI() {
+	  var script = document.createElement('script');
+	  script.type = 'text/javascript';
+	  script.src = 'https://maps.googleapis.com/maps/api/js?v=3' +
+	      '&signed_in=true&key=' + apiKey +'&callback=initialize';
+	  document.body.appendChild(script);
+
+
+	}
+
+	document.addEventListener("DOMContentLoaded", function(event) {
+		loadMapsAPI();
+	});
+
+     </script>
+
   </head>
   <body>
-  	<div id="output"></div>
-    <div id="wrapper">
-      <div id="map-canvas"></div>
-      <div id="maplabel"></div>
-    </div>
+      <div id="output"></div>
+      <div id="wrapper">
+	      <div id="map-canvas"></div>
+	      <div id="maplabel"></div>
+      </div>
   </body>
 </html>
