move apikeys.js to static/

--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -32,7 +32,7 @@
       .latlon { color: gray; }
 
     </style>
-     <script src="apikey.js"></script>
+     <script src="../static/apikey.js"></script>
      <script src="functions.js"></script>
      <script src="websock.js"></script>
      <script src="config.js"></script>
