--- a/docroot/map/index.html
+++ b/docroot/map/index.html
@@ -17,8 +17,6 @@
 
     </style>
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
-
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -34,10 +32,11 @@
       function loadMapsAPI() {
         var script = document.createElement('script');
         script.type = 'text/javascript';
-        if (typeof apiKey != 'undefined' | apiKey != "" ) {
+        if (typeof apiKey != 'undefined' && apiKey != "" ) {
           script.src = 'https://maps.googleapis.com/maps/api/js?v=3' +
             '&signed_in=true&key=' + apiKey +'&callback=initialize_googlemaps';
         } else {
+          $("head").append("<link rel='stylesheet' href='https://unpkg.com/leaflet@1.0.2/dist/leaflet.css' type='text/css' />");
           // Dynamic script loading from http://stackoverflow.com/a/8578840
           (function(d, s, id){
             var js, fjs = d.getElementsByTagName(s)[0];
