--- a/docroot/map/index.html
+++ b/docroot/map/index.html
@@ -25,7 +25,7 @@
 
     <script src="../static/js/mustache.js"></script>
     <script src="../static/js/moment.min.js"></script>
-    <script src="map_google"></script>
+    <script src="map_google.js"></script>
     <script src="map_leaflet.js"></script>
     <script src="../static/apikey.js"></script>
     <script>
