ping/ping monitoring user/device no longer shows up on map nor in table 	closes #195

--- a/docroot/table/index.html
+++ b/docroot/table/index.html
@@ -59,6 +59,10 @@
 	for (i in data) {
 		var d = data[i];
 
+		if (d.username == 'ping' && d.device == 'ping') {
+			continue;
+		}
+
 		if (!d.topic) {
 			console.log("SKIP " + JSON.stringify(d));
 			continue;
