remove deprecated signed_in in Google maps

--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -43,7 +43,7 @@
 	  var script = document.createElement('script');
 	  script.type = 'text/javascript';
 	  script.src = 'https://maps.googleapis.com/maps/api/js?v=3' +
-	      '&signed_in=true&key=' + apiKey +'&callback=initialize';
+	      '&key=' + apiKey +'&callback=initialize';
 	  document.body.appendChild(script);
 
 
