--- a/docroot/last/index.html
+++ b/docroot/last/index.html
@@ -53,7 +53,7 @@
             script.src = 'https://maps.googleapis.com/maps/api/js?v=3' +
 	      '&key=' + apiKey +'&callback=initialize_googlemaps';
           } else {
-            $("head").append("<link rel='stylesheet' href='https://unpkg.com/leaflet@1.0.2/dist/leaflet.css' type='text/css' />");
+            $("head").append("<link rel='stylesheet' href='/static/leaflet/leaflet.css' type='text/css' />");
             
             // Dynamic script loading from http://stackoverflow.com/a/8578840
             (function(d, s, id){
@@ -63,7 +63,7 @@
               js.onload = function(){
                 initialize_leaflet();
               };
-              js.src = "https://unpkg.com/leaflet@1.0.2/dist/leaflet.js";
+              js.src = "/static/leaflet/leaflet.js";
               fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'leaflet'));
           }
