--- a/docroot/table/index.html
+++ b/docroot/table/index.html
@@ -284,7 +284,7 @@
                             visible: true,
                             data: null,
                             render : function(data, type, row) {
-			    	var t = "<a target='_new' href='http://maps.google.com/?q={{lat}},{{lon}}'>{{addr}}</a>";
+				var t = "<a target='_new' href='http://www.openstreetmap.org/?mlat={{lat}}&mlon={{lon}}'>{{addr}}</a>";
 				return Mustache.render(t, data);
 			    },
                             "targets" : [10],
